--- a/_data/tag/ctf.yml
+++ b/_data/tag/ctf.yml
@@ -46,3 +46,6 @@
 - name:  Getting started with CTF data
   link:  /getting_started/ctf
 
+- name:  Template 3-D gradiometer descriptions
+  link:  /template/gradiometer
+
